--- a/a15/package.json
+++ b/a15/package.json
@@ -2,7 +2,11 @@
   "name": "a15",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~15.2.0",
