--- a/a15/package.json
+++ b/a15/package.json
@@ -9,10 +9,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-architects/module-federation-tools": "^14.3.14",
     "@angular/animations": "~15.2.0",
     "@angular/common": "~15.2.0",
     "@angular/compiler": "~15.2.0",
     "@angular/core": "~15.2.0",
+    "@angular/elements": "^15.2.3",
     "@angular/forms": "~15.2.0",
     "@angular/platform-browser": "~15.2.0",
     "@angular/platform-browser-dynamic": "~15.2.0",
@@ -38,6 +40,7 @@
     "@nrwl/js": "15.8.6",
     "@nrwl/linter": "15.8.6",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/web": "^15.8.6",
     "@nrwl/workspace": "15.8.6",
     "@schematics/angular": "~15.2.0",
     "@types/jest": "^29.4.0",
