First working wc version but with router errors

--- a/a15/apps/webcomponent-a15-as-mf/tsconfig.json
+++ b/a15/apps/webcomponent-a15-as-mf/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2022",
+    "target": "es2015",
+    "module": "es2020",
     "useDefineForClassFields": false,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
