--- a/a15/apps/a15-host/project.json
+++ b/a15/apps/a15-host/project.json
@@ -66,7 +66,7 @@
       "options": {
         "port": 5200,
         "publicHost": "http://localhost:5200",
-        "devRemotes": ["a15-remote"],
+        "devRemotes": ["a15-remote", "webcomponent-a15-as-mf"],
         "skipRemotes": ["a14-remote"]
       }
     },
